use toList()